; ModuleID = '/home/carl/AnghaBench/linux/drivers/hid/extr_hid-led.c_riso_kagaku_index.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/hid/extr_hid-led.c_riso_kagaku_index.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hidled_rgb = type { %struct.TYPE_12__, %struct.TYPE_10__, %struct.TYPE_8__ }
%struct.TYPE_12__ = type { %struct.TYPE_11__ }
%struct.TYPE_11__ = type { i32 }
%struct.TYPE_10__ = type { %struct.TYPE_9__ }
%struct.TYPE_9__ = type { i32 }
%struct.TYPE_8__ = type { %struct.TYPE_7__ }
%struct.TYPE_7__ = type { i32 }

@riso_kagaku_switch_green_blue = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.hidled_rgb*)* @riso_kagaku_index to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @riso_kagaku_index(%struct.hidled_rgb* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.hidled_rgb*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.hidled_rgb* %0, %struct.hidled_rgb** %3, align 8
  %7 = load %struct.hidled_rgb*, %struct.hidled_rgb** %3, align 8
  %8 = getelementptr inbounds %struct.hidled_rgb, %struct.hidled_rgb* %7, i32 0, i32 2
  %9 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  store i32 %11, i32* %4, align 4
  %12 = load %struct.hidled_rgb*, %struct.hidled_rgb** %3, align 8
  %13 = getelementptr inbounds %struct.hidled_rgb, %struct.hidled_rgb* %12, i32 0, i32 1
  %14 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %13, i32 0, i32 0
  %15 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  store i32 %16, i32* %5, align 4
  %17 = load %struct.hidled_rgb*, %struct.hidled_rgb** %3, align 8
  %18 = getelementptr inbounds %struct.hidled_rgb, %struct.hidled_rgb* %17, i32 0, i32 0
  %19 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %18, i32 0, i32 0
  %20 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  store i32 %21, i32* %6, align 4
  %22 = load i64, i64* @riso_kagaku_switch_green_blue, align 8
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %29

24:                                               ; preds = %1
  %25 = load i32, i32* %4, align 4
  %26 = load i32, i32* %6, align 4
  %27 = load i32, i32* %5, align 4
  %28 = call i32 @RISO_KAGAKU_IX(i32 %25, i32 %26, i32 %27)
  store i32 %28, i32* %2, align 4
  br label %34

29:                                               ; preds = %1
  %30 = load i32, i32* %4, align 4
  %31 = load i32, i32* %5, align 4
  %32 = load i32, i32* %6, align 4
  %33 = call i32 @RISO_KAGAKU_IX(i32 %30, i32 %31, i32 %32)
  store i32 %33, i32* %2, align 4
  br label %34

34:                                               ; preds = %29, %24
  %35 = load i32, i32* %2, align 4
  ret i32 %35
}

declare dso_local i32 @RISO_KAGAKU_IX(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
